##################################################################

Special notes for release 0.006:
--------------------------------
The svc99() routine is now functional.
An smf_record() routine is now available yet will be
untested by test.pl owing to SMF deployment differences.  See
the smf_test enclosed program for a way to test smf_record()
before running `make install`.

The stdio_cookbook.pod document has been expanded.

You now have the option of passing data set names (e.g. partial
names) to the get_dcb() and getname() routines in addition to still
being able to pass mvsopen() file handles.

All 161 tests ought to pass for you.

##################################################################

Special notes for release 0.005:
--------------------------------
The dynalloc() routine is now functional.
The dynfree() routine is now functional.

The pds_mem() routine and the internal _pds_mem() function should
now be a bit more efficient than the previous release.  pds_mem()
can now list aliases or aliases and non alias members
depending on the value of an extra optional argument.

* A pds_mem() test has been folded into test.pl, along with a
  dynalloc() and a dynfree() test.  All 76 tests ought to pass for
  you.

##################################################################

Special notes for release 0.004:
--------------------------------
The pds_mem() routine now does a better job of EXTENDing the 
perl XS ST-ack and ought to work with PDS'es that have more than
100 members.  It does not list ALIAS members as was noted
in testing (and documented in Stdio.pm).  A more extensive
test of pds_mem() has yet to be written.  All 70 tests ought to
pass for you though.

##################################################################

Special notes for release 0.003:
--------------------------------
The pds_mem() function is now functional.

##################################################################

Special notes for release 0.002: