@@ -7,9 +7,9 @@ and nfs mount with no XLAT parameter set).
 
 In summary the steps you then need to execute are:
 
-    gunzip OS390-Stdio-0.006.tar.gz
-    pax -f -t < OS390-Stdio-0.006.tar
-    cd OS390-Stdio-0.006
+    gunzip OS390-Stdio-0.007.tar.gz
+    pax -ofrom=ISO8859-1,to=IBM-1047  -rf OS390-Stdio-0.007.tar
+    cd OS390-Stdio-0.007
     perl Makefile.PL
     make
     make test
@@ -25,19 +25,23 @@ In detail the steps are:
 Unpack the ASCII source code archive (the gunzip can be done on a non 
 OE/USS machine if necessary):
 
-    gunzip OS390-Stdio-0.006.tar.gz
+    gunzip OS390-Stdio-0.007.tar.gz
 
 From the OE/USS shell unpack the archive specifying that you want
 an ASCII -> EBCDIC conversion to take place:
 
-    pax -f -t < OS390-Stdio-0.006.tar
+    pax -ofrom=ISO8859-1,to=IBM-1047 -rf OS390-Stdio-0.007.tar
+
+which might also have been executed as:
+
+    pax -o to=IBM-1047,from=ISO8859-1 -r < OS390-Stdio-0.007.tar
 
 then configure and build (see `perldoc ExtUtils::MakeMaker` for more
 information on building staticially linked perl extensions and other 
 options to pass to perl on the `perl Makefile.PL` step, as well as
 the section "Build tips" below for more info):
 
-    cd OS390-Stdio-0.006
+    cd OS390-Stdio-0.007
     perl Makefile.PL  [-DNO_WARN_IF_NOT_PDS]
     make
 
@@ -146,6 +150,12 @@ routine on systems that have SMF running (and whose SMF.BPX facility
 allows a perl program to write to SMF).
 
 ##################################################################
+
+Special notes for release 0.007:
+--------------------------------
+Nothing special, just some documentation fixes and a Makefile.PL
+fix for compatibility with the MakeMaker that ships with Perl 5.8.0.
+Thanks to Vincent Herried and Brad Van Duser.
 
 Special notes for release 0.006:
 --------------------------------
